Exercice 1 Ok EZ

--- a/src/main/java/fr/univ_amu/iut/exercice1/CounterView.fxml
+++ b/src/main/java/fr/univ_amu/iut/exercice1/CounterView.fxml
@@ -6,21 +6,26 @@
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
-<BorderPane xmlns:fx="http://javafx.com/fxml"
-            xmlns="http://javafx.com/javafx"
-            fx:controller="fr.univ_amu.iut.exercice1.CounterController">
-    <padding>
-        <Insets top="20" right="20" bottom="20" left="20"/>
-    </padding>
 
+<BorderPane style="-fx-background-color: red;" xmlns="http://javafx.com/javafx/8.0.112" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fr.univ_amu.iut.exercice1.CounterController">
+    <padding>
+        <Insets bottom="20" left="20" right="20" top="20" />
+    </padding>
     <center>
         <VBox alignment="CENTER" spacing="10">
-            <Label fx:id="counterLabel" text="${controller.counter}">
+            <Label fx:id="counterLabel">
                 <font>
-                    <Font size="20"/>
+                    <Font size="20" />
                 </font>
             </Label>
-            <Button fx:id="incrementButton" text="Click to increment" onAction="#increment"/>
+            <Button fx:id="incrementButton" onAction="#increment" text="Click to increment" textFill="#bc2a2a">
+            <font>
+               <Font name="System Bold Italic" size="11.0" />
+            </font></Button>
+            <Button fx:id="decrementButton" onAction="#Decrement" text="Click to decrement" textFill="#3e21fc">
+            <font>
+               <Font name="System Bold Italic" size="24.0" />
+            </font></Button>
         </VBox>
     </center>
 </BorderPane>
